--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
     "react-particles-js": "^3.6.0",
     "tailwindcss": "3.3.1",
@@ -27,6 +28,7 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/zxcvbn": "^4.4.1"
   }
 }
