--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
     "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint-config-next": "^12.0.4",
+    "js-cookie": "^3.0.5",
     "next": "13.3.0",
     "next-iron-session": "^4.2.0",
     "password-strength-meter": "^2.1.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.43.9",
@@ -39,6 +41,7 @@
     "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4",
+    "universal-cookie": "^4.0.4",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
