--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.2.1",
-    "react-particles-js": "^3.6.0",
+    "react-tsparticles": "^1.18.6",
+
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.12.1",
