--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
@@ -29,14 +30,13 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-loading-skeleton": "^3.2.1",
-    "react-tsparticles": "^1.18.6",
-
     "react-player": "^2.12.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.12.1",
     "react-scroll-parallax": "^3.4.2",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "react-tsparticles": "^1.18.6",
     "react-youtube": "^10.1.0",
     "sass": "^1.62.1",
     "slick-carousel": "^1.8.1",
